# latex-task-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/latex_task_utils/: __init__.py  jinja.py  matplotlib.py  symbols.py
src/latex_task_utils/symbols_templates/: description.tex
tests/jinja/: test_render.py
tests/jinja/symbol/: symbols.toml  test_code_display.py  test_create_macro.py  test_read_toml.py
tests/matplotlib/: test_config.py  test_save.py
tests/symbol/: category.toml  symbols.toml  test_code_display.py  test_create_macro.py  test_read_toml.py  test_write_symbols_index.py  test_write_symbols_sty.py
