[project]
name = "latex-task-utils"
version = "0.1.0"
description = "A utility package for building LaTeX documents with task runners (e.g. pytask)."
readme = "README.md"
authors = [
    { name = "Max Weiner", email = "max.weiner@posteo.de" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "tomlkit>=0.13.3",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
