[project]
name = "latex-task-utils"
version = "0.1.0"
description = "A utility package for building LaTeX documents with task runners (e.g. pytask)."
readme = "README.md"
authors = [{ name = "Max Weiner", email = "max.weiner@posteo.de" }]
requires-python = ">=3.10"
dependencies = ["jinja2>=3.0", "matplotlib>=3.8", "tomlkit>=0.13"]

[project.optional-dependencies]
pytask = ["pytask>=0.5"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["pytest>=8.4.2", "rich>=14.2.0"]
